Bug 1633809 - Suppress -Wpointer-bool-conversion in WrapNotNullUnchecked. r=miko

Differential Revision: https://phabricator.services.mozilla.com/D73013